--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -14,7 +14,6 @@ body {
   font-weight: 500;
   font-style: normal;
   font-size: 1.2em;
-  padding: 0 20%;
   line-height: 1.5;
 
 }
@@ -26,6 +25,11 @@ h1, h2, h3, h4, h5, h6, strong, b {
 // -- temp styles -- //
 body {
   text-align: center;
+  padding: 0 25%;
+  @include mq(small) {
+    padding: 0 5%;
+  }
+
 }
 h1 {
   margin: 15% 0 2em;
@@ -33,16 +37,24 @@ h1 {
   letter-spacing: 1px;
   font-weight: 700;
   text-transform: uppercase;
-  border: 1px solid #333;
+  // border: 1px solid #333;
   display: inline-block;
   line-height: 0.5;
   padding: .5em .25em .1em;
+  @include mq(small) {
+    font-size: 1em;
+  }
 }
 h2 {
   border-top: 1px solid #ddd;
   padding-top: 2em;
   font-size: 2.5em;
   margin: 2em 0 1em;
+  @include mq(small) {
+    line-height: 1.2;
+    font-size: 1.75em;
+  }
+
 }
 p {
   margin: 0 0 .5em;
