Added purchase path for Stripe inc. supporting thanks and canceled pages.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-  <p>2020 &copy; Ten O'Clock Books.</p>
+  <p>2020 &copy; Ten O'Clock Books. Email <a href="hello@tenoclockbooks.com">hello@tenoclockbooks.com</a>.</p>
 </footer>
