New image and improved responsive layout

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -66,9 +66,8 @@ a {
   text-decoration: underline;
 }
 main img {
-  border: 1px solid #ddd;
   display: block;
-  margin: 2em 0;
+  margin: 75px 0;
 }
 footer {
   margin: 100px 0;
