--- a/_sass/_purchase.scss
+++ b/_sass/_purchase.scss
@@ -2,6 +2,9 @@
   text-align: left;
   display: inline-block;
   width: 80%;
+  @include mq(narrow) {
+    text-align: center;
+  }
 }
 .purchase--heading {
   font-weight: 700;
@@ -11,7 +14,7 @@
 .purchase--action {
   margin: 1em 0;
   white-space: nowrap;
-  @include mq(small) {
+  @include mq(narrow) {
     display: block;
     text-align: center;
   }
@@ -33,8 +36,9 @@
     transform: scale(1.03);
     background-color: #ed1a35;
   }
-  @include mq(small) {
+  @include mq(narrow) {
     display: block;
+    margin: .5em auto;
   }
 
 }
