--- a/_includes/purchase.html
+++ b/_includes/purchase.html
@@ -1,9 +1,10 @@
 <section class="purchase">
       {% for item in site.data.books %} <!-- Get everything in the books file -->
-        <h3 class="purchase--heading">Pre-order {{ item.title }} book now</h3>
-        <h4 class="purchase--price"> £{{ item.unit_price }} plus shipping</h4>
+        <h3 class="purchase--heading">{{ item.title }} is available to pre-order now</h3>
+        <h4 class="purchase--price"> £{{ item.unit_price }} plus shipping (limited edition of 450).</h4>
         <p class="purchase--action"><button id="checkout-button-sku_GlOAeVsxcgFBex" role="link" class="buy">UK shipping – buy now</button> plus £5 shipping</p>
         <p class="purchase--action"><button id="checkout-button-sku_GlP6MnoJuzggI3" role="link" class="buy">Int. shipping – buy now</button> plus £14.95 shipping</p>
       {% endfor %}
-      <p class="purchase--deliveryest"> A limited edition run of 450 plus 50 artist editions (boxed with print) – publication is estimated to ship in April 2020.</p>
+      <p class="purchase--deliveryest">An exclusive Artist Edition (boxed with a beautiful signed print) is also available. <a href="mailto:hello@tenoclockbooks.com">Email</a> for details.
+Publication is estimated to ship in April 2020.</p>
 </section>
