Small style changes to error div

--- a/_includes/stripe.html
+++ b/_includes/stripe.html
@@ -1,6 +1,6 @@
 <script src="https://js.stripe.com/v3"></script>
 {% include purchase.html %}
-<div id="error-message"></div>
+<div id="error-message" class="error"></div>
 <!-- UK -->
 <script>
 (function() {
