--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,6 @@
 <footer>
+  <p class="poweredby">
+    <img src="{{ p.url | prepend: site.baseurl }}/assets/images/powered_by_stripe@2x.png" alt="Payments powered by Stripe" />
+  </p>
   <p>2020 &copy; Ten O'Clock Books. Email <a href="hello@tenoclockbooks.com">hello@tenoclockbooks.com</a>.</p>
 </footer>
