--- a/_layouts/default_nosale.html
+++ b/_layouts/default_nosale.html
@@ -1,7 +1,7 @@
 {% include head.html %}
   <body>
     <main>
-      <h1 class="logo"><a href="/"><img class="title--logo" src="{{ p.url | prepend: site.baseurl }}/assets/images/logo-tenoclockbooks.png" alt="Ten O'Clock Books" /></a></h1>
+      <h1 class="logo"><img class="title--logo" src="{{ p.url | prepend: site.baseurl }}/assets/images/logo-tenoclockbooks.png" alt="Ten O'Clock Books" /></h1>
       {{ content }}
   </main>
   {% include footer.html %}
