Fixed success redirect

--- a/_includes/stripe.html
+++ b/_includes/stripe.html
@@ -18,7 +18,7 @@
       // a successful payment.
       // Instead use one of the strategies described in
       // https://stripe.com/docs/payments/checkout/fulfillment
-      successUrl: 'https://www.tenoclockbooks.com/success',
+      successUrl: 'https://www.tenoclockbooks.com/thanks',
       cancelUrl: 'https://www.tenoclockbooks.com/canceled',
       billingAddressCollection: 'required',
     })
@@ -50,7 +50,7 @@
       // a successful payment.
       // Instead use one of the strategies described in
       // https://stripe.com/docs/payments/checkout/fulfillment
-      successUrl: 'https://www.tenoclockbooks.com/success',
+      successUrl: 'https://www.tenoclockbooks.com/thanks',
       cancelUrl: 'https://www.tenoclockbooks.com/canceled',
     })
     .then(function (result) {
