--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -52,7 +52,10 @@ h2 {
     line-height: 1.2;
     font-size: 1.75em;
   }
-
+}
+h3 {
+  font-weight: 500;
+  font-size: 1.5em;
 }
 p {
   margin: 0 0 .5em;
