--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -56,6 +56,11 @@ h2 {
 h3 {
   font-weight: 500;
   font-size: 1.5em;
+  @include mq(small) {
+    line-height: 1.2;
+    font-size: 1.25em;
+    margin: 0 0 .5em;
+  }
 }
 p {
   margin: 0 0 .5em;
