--- a/_includes/stripe_artistsedition.html
+++ b/_includes/stripe_artistsedition.html
@@ -32,3 +32,33 @@
   });
 })();
 </script>
+<script>
+(function() {
+  var stripe = Stripe('pk_live_Nr6cMArk6PU4EcOk38vAWQQe008LxRlbPs');
+
+  var checkoutButton = document.getElementById('checkout-button-sku_Gm8Hh4C81u9Lq7');
+  checkoutButton.addEventListener('click', function () {
+    // When the customer clicks on the button, redirect
+    // them to Checkout.
+    stripe.redirectToCheckout({
+      items: [{sku: 'sku_Gm8Hh4C81u9Lq7', quantity: 1}],
+
+      // Do not rely on the redirect to the successUrl for fulfilling
+      // purchases, customers may not always reach the success_url after
+      // a successful payment.
+      // Instead use one of the strategies described in
+      // https://stripe.com/docs/payments/checkout/fulfillment
+      successUrl: 'https://www.tenoclockbooks.com/thanks',
+      cancelUrl: 'https://www.tenoclockbooks.com/canceled',
+    })
+    .then(function (result) {
+      if (result.error) {
+        // If `redirectToCheckout` fails due to a browser or network
+        // error, display the localized error message to your customer.
+        var displayError = document.getElementById('error-message');
+        displayError.textContent = result.error.message;
+      }
+    });
+  });
+})();
+</script>
