--- a/_includes/purchase.html
+++ b/_includes/purchase.html
@@ -5,6 +5,9 @@
         <p class="purchase--action"><button id="checkout-button-sku_GlS4daIzAFmr6x" role="link" class="buy">UK shipping – buy now</button> plus £5 shipping</p>
         <p class="purchase--action"><button id="checkout-button-sku_GlSJ1jKhNAq9Ch" role="link" class="buy">Int. shipping – buy now</button> plus £14.95 shipping</p>
       {% endfor %}
+      <p class="poweredby">
+        <img src="{{ p.url | prepend: site.baseurl }}/assets/images/powered_by_stripe@2x.png" alt="Payments powered by Stripe" />
+      </p>
       <p class="purchase--deliveryest">An exclusive <strong>Artist Edition</strong> (boxed with a beautiful signed print) is also <a href="/fisherwomen_artists_edition">available here</a>.
 Publication is estimated to ship in April 2020.</p>
 </section>
