Updated homepage design

--- a/_includes/purchase.html
+++ b/_includes/purchase.html
@@ -1,4 +1,4 @@
-<section class="purchase">
+  <section class="purchase">
       {% for item in site.data.books %} <!-- Get everything in the books file -->
         <h3 class="purchase--heading">{{ item.title }} is available to pre-order now</h3>
         <h4 class="purchase--price"> £{{ item.unit_price }} plus shipping (limited edition of 450).</h4>
@@ -11,3 +11,4 @@
       <p class="purchase--deliveryest">An exclusive <strong>Artist Edition</strong> (boxed with a beautiful signed print) is also <a href="/fisherwomen_artists_edition">available here</a>.
 Publication is estimated to ship in April 2020.</p>
 </section>
+</div>
