--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,12 +3,12 @@
 <div id="mc_embed_signup" class="mc_signup">
 <form action="https://tenoclockbooks.us19.list-manage.com/subscribe/post?u=af934924eff750dff65c59e9d&amp;id=7cb05098b3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
   <div id="mc_embed_signup_scroll">
-  	<h2>Email newsletter signup</h2>
-    <p>Receive news and updates about our publications.</p>
+  	<!-- <h2>Email newsletter signup</h2> -->
+    <!-- <p>Receive news and updates about our publications.</p> -->
     <div class="mc_signup--elements">
       <div class="mc-field-group">
-      	<label for="mce-EMAIL">Email address </label>
-      	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+      	<label for="mce-EMAIL">Email newsletter signup</label>
+      	<input type="email" value="" placeholder="Add email address" name="EMAIL" class="required email" id="mce-EMAIL">
       </div>
     	<div id="mce-responses" class="clear">
     		<div class="response" id="mce-error-response" style="display:none"></div>
@@ -24,6 +24,5 @@
 </form>
 </div>
 
-<p class="footer--copyright">2020 &copy; Ten O'Clock Books. Email <a href="hello@tenoclockbooks.com">hello@tenoclockbooks.com</a>.</p>
-
+<p class="footer--copyright"><a href="#"><img class="logomark" src="{{ p.url | prepend: site.baseurl }}/assets/images/logomark.png" alt="Ten O'Clock Books" /></a>2020 &copy; Ten O'Clock Books. Email <a href="hello@tenoclockbooks.com">hello@tenoclockbooks.com</a>.</p>
 </footer>
