--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,24 @@
 {% include head.html %}
   <body>
-    <main>
-      <h1 class="logo"><a href="/"><img class="title--logo" src="{{ p.url | prepend: site.baseurl }}/assets/images/logo-tenoclockbooks.png" alt="Ten O'Clock Books" /></a></h1>
+    <main class="content">
+      <header class="header">
+        <h1 class="title"><a href="/"><img class="title--logo" src="{{ p.url | prepend: site.baseurl }}/assets/images/logo-tenoclockbooks.png" alt="Ten O'Clock Books" /></a></h1>
+        <section class="follow">
+          <!-- <h2 class="follow--header">Follow us</h2> -->
+          <ul class="follow--links">
+            <li>
+              <a href="https://www.instagram.com/tenoclockbooks">
+                <img class="follow--icon" src="{{ p.url | prepend: site.baseurl }}/assets/images/icon--instagram.png" alt="Instagram" /></a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/tenoclockbooks">
+                <img class="follow--icon" src="{{ p.url | prepend: site.baseurl }}/assets/images/icon--facebook.png" alt="Facebook" /></a>
+            </li>
+          </ul>
+        </section>
+      </header>
 
+<!--
       <div class="alert">
         <h1>Coronavirus update</h1>
         <p>As you are aware, the Coronavirus has affected nearly every part of our lives.
@@ -10,39 +26,25 @@
           has been delayed to ensure anyone working on the project is not put at risk.</p>
         <p>Of course, being a start-up book publisher, we would be grateful for any further
           pre-orders at this time. Stay safe.</p>
-      </div>
+      </div> -->
 
-      <section class="follow">
-        <h2 class="follow--header">Follow us</h2>
-        <ul class="follow--links">
-          <li>
-            <a href="https://www.instagram.com/tenoclockbooks">
-              <img class="follow--icon" src="{{ p.url | prepend: site.baseurl }}/assets/images/icon--instagram.png" alt="Instagram" /></a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/tenoclockbooks">
-              <img class="follow--icon" src="{{ p.url | prepend: site.baseurl }}/assets/images/icon--facebook.png" alt="Facebook" /></a>
-          </li>
-        </ul>
-      </section>
-      
+      <p class="statement">
+        Upcoming photo book available to pre-order
+      </p>
+
+      <section class="content-intro">
       {{ content }}
 
-      {% if page.shipping == true and page.tags contains "general" %}
+      <div class="purchase--wrap">
+        <button class="purchase-link"><a class="purchase-link--anchor" href="">Standard edition</a></button>
+        <button class="purchase-link"><a class="purchase-link--anchor" href="">Artist edition</a></button>
+      </div>
 
-        {% include stripe.html %}
+      </section>
 
-      {% elsif page.shipping == true and page.tags contains "artistsedition" %}
 
-        {% include stripe_artistsedition.html %}
 
-      {% elsif page.shipping == false %}
-
-        {% include stripe_noshipping.html %}
-
-      {% endif %}
-
-  </main>
+    </main>
 
 <!--End mc_embed_signup-->
   {% include footer.html %}
