--- a/_sass/_purchase.scss
+++ b/_sass/_purchase.scss
@@ -1,7 +1,31 @@
+.purchase--wrap {
+  margin: 25px auto;
+  @include cf();
+}
+.purchase-link {
+  float: left;
+  width: 46%;
+  background-color: $red;
+  margin: 25px 2%;
+  box-sizing: border-box;
+  @include transition();
+  &:hover {
+    transform: scale(1.05);
+  }
+  &:nth-of-type(1) { margin-left: 0;}
+  &:nth-of-type(2) { margin-right: 0;}
+}
+.purchase-link--anchor {
+  padding: .5em;
+  display: block;
+  color: #fff;
+  font-weight: 700;
+  text-decoration: none;
+}
 .purchase {
   text-align: left;
   display: inline-block;
-  width: 80%;
+  // width: 80%;
   @include mq(narrow) {
     text-align: center;
   }
