--- a/_includes/purchase.html
+++ b/_includes/purchase.html
@@ -8,7 +8,7 @@
       <p class="poweredby">
         <img src="{{ p.url | prepend: site.baseurl }}/assets/images/powered_by_stripe@2x.png" alt="Payments powered by Stripe" />
       </p>
-      <p class="purchase--deliveryest">An exclusive <strong>Artist Edition</strong> (boxed with a beautiful signed print) is also <a href="/fisherwomen_artists_edition">available here</a>.
-Publication is estimated to ship in April 2020.</p>
+      <p class="purchase--deliveryest">An exclusive <strong>Artist Edition</strong> (boxed with a beautiful signed print) is also <a href="/fisherwomen_artists_edition">available here</a>.</p>
+      <p>Publication is estimated to ship in April 2020.</p>
 </section>
 </div>
