--- a/_sass/_purchase.scss
+++ b/_sass/_purchase.scss
@@ -22,10 +22,13 @@
   font-weight: 700;
   text-decoration: none;
 }
+
 .purchase {
   text-align: left;
-  display: inline-block;
-  // width: 80%;
+  border-top: 12px solid lighten($red,45%);
+  // max-width: 640px;
+  margin: 25px auto;
+  padding: 25px 0;
   @include mq(narrow) {
     text-align: center;
   }
@@ -44,9 +47,9 @@
   }
 }
 .purchase--deliveryest {
-  font-size: .9em;
-  font-style: italic;
-
+  // font-size: .9em;
+  // font-style: italic;
+  display: block;
 }
 .buy {
   background-color: black;
@@ -65,6 +68,13 @@
     margin: .5em auto;
   }
 
+}
+.poweredby {
+  img {
+    max-width: 128px;
+    margin: 25px auto;
+    float: none;
+  }
 }
 .noshipping {
   .buy {
