--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,6 +4,8 @@
         "colors",
         "typography",
         "mixins",
+        "content",
+        "product",
         "purchase";
 
 
@@ -85,75 +87,8 @@ body {
   text-align: center;
   font-weight: 700;
   max-width: 100%;
-
 }
 
-h2 {
-  // border-top: 1px solid #ddd;
-  // padding-top: 1em;
-  font-family: $headerFont;
-  font-size: 2.25em;
-  // margin: 1em 0 1em;
-  // text-align: center;
-  // float: left;
-  margin: 25px 0 50px;
-  padding-top: 50px;
-  @include mq(small) {
-    line-height: 1.2;
-    font-size: 1.75em;
-  }
-}
-h3 {
-  font-weight: 500;
-  font-size: 1.5em;
-  @include mq(small) {
-    line-height: 1.2;
-    font-size: 1.25em;
-    margin: 0 0 .5em;
-  }
-}
-p {
-  margin: 0 0 .5em;
-  word-spacing: -30%;
-  strong {
-    font-weight: 700;
-  }
-}
-
-a {
-  text-decoration: underline;
-}
-.content {
-
-}
-.content-intro {
-  max-width: 480px;
-  margin:  0 auto;
-  h3 img {
-    display: block;
-    // margin: 0 auto 50px;
-    width: 100%;
-    max-width: 480px;
-    // border: 15px solid #eee;
-    // float: left;
-    margin: 50px 50px 50px 0;
-
-  }
-  p {
-
-  }
-}
-// main img {
-//   display: block;
-//   margin: 75px 0;
-// }
-main p {
-  // text-align: justify;
-  word-spacing: -2px;
-  @include mq(narrow) {
-    text-align: left;
-  }
-}
 footer {
   margin: 50px auto 25px;
   border-top: 2px solid #ddd;
@@ -179,12 +114,7 @@ footer {
   }
 
 }
-.poweredby {
-  img {
-    max-width: 128px;
-    margin: 25px auto;
-  }
-}
+
 .error {
   margin: 0 50px;
   font-weight: 700;
