--- a/_includes/purchase_artistsedition.html
+++ b/_includes/purchase_artistsedition.html
@@ -1,9 +1,18 @@
 <section class="purchase">
+  <h3 class="purchase--heading">Pre-order purchase Artist Edition</h3>
+    <div class="purchase-info">
       {% for item in site.data.books %} <!-- Get everything in the books file -->
-        <h3 class="purchase--heading">{{ item.title }} – Artist's Edition is available to pre-order now</h3>
-        <h4 class="purchase--price"> £{{ item.unit_price_special }} plus shipping (limited edition of 50).</h4>
-        <p class="purchase--action"><button id="checkout-button-sku_Gm7SWsQW0UaOch" role="link" class="buy">UK shipping – buy now</button> plus £5 shipping</p>
-        <p class="purchase--action"><button id="checkout-button-sku_Gm8Hh4C81u9Lq7" role="link" class="buy">Int. shipping – buy now</button> plus £14.95 shipping</p>
+        <!-- <h3 class="purchase--heading">{{ item.title }} – Artist's Edition is available to pre-order now</h3> -->
+        <h4 class="purchase--price"><strong>£{{ item.unit_price_special }}</strong> plus shipping</h4>
+        <p class="purchase--action"><button id="checkout-button-sku_Gm7SWsQW0UaOch" role="link" class="buy">Buy now – UK<small>(plus £5 UK shipping)</small></button></p>
+        <p class="purchase--action"><button id="checkout-button-sku_Gm8Hh4C81u9Lq7" role="link" class="buy">Buy now – International<small>(plus £14.95 International shipping)</small></button></p>
 
       {% endfor %}
+      </div>
+      <aside class="purchase-meta">
+        <p>This Artist Edition is limited to 50 editions.</p>
+        <p>Publication is estimated to ship in May-June 2020.</p>
+
+      </aside>
+
 </section>
