--- a/_sass/_purchase.scss
+++ b/_sass/_purchase.scss
@@ -14,6 +14,11 @@
   }
   &:nth-of-type(1) { margin-left: 0;}
   &:nth-of-type(2) { margin-right: 0;}
+  @include mq(narrow) {
+    float: none;
+    width: 100%;
+    margin: 15px 0;
+  }
 }
 .purchase-link--anchor {
   padding: .5em;
@@ -27,23 +32,38 @@
   text-align: left;
   border-top: 12px solid lighten($red,45%);
   // max-width: 640px;
-  margin: 25px auto;
-  padding: 25px 0;
+  margin: 25px auto 0;
+  padding: 25px 0 0;
+  @include cf();
   @include mq(narrow) {
     text-align: center;
   }
+}
+.purchase-info {
+  float: left;
+  width: 50%;
+  max-width: 480px;
+  margin-right: 25px;
+  @include mq(narrow) {
+    width: 100%;
+    float: none;
+    max-width: 100%;
+    margin-right: 0;
+  }
+}
+.purchase-meta {
+
 }
 .purchase--heading {
   font-weight: 700;
   font-size: 1.35em;
   line-height: 1.2;
+  color: $red;
+  margin: 0 0 25px;
 }
-.purchase--action {
-  margin: 1em 0;
-  white-space: nowrap;
-  @include mq(narrow) {
-    display: block;
-    text-align: center;
+.purchase--price {
+  strong {
+    font-weight: 700;
   }
 }
 .purchase--deliveryest {
@@ -51,17 +71,32 @@
   // font-style: italic;
   display: block;
 }
+.purchase--action {
+  margin: 1em 0;
+  // white-space: nowrap;
+  @include mq(narrow) {
+    display: block;
+    text-align: center;
+  }
+}
+
 .buy {
-  background-color: black;
+  background-color: $red;
   color: white;
   display: inline-block;
-  padding: 0.2em .5em 0;
-  border-radius: 2px;
-  min-width: 60%;
+  padding: .5em;
+  border-radius: 1px;
+  width: 100%;
+  font-weight: 700;
     @include transition();
   &:hover {
     transform: scale(1.03);
     background-color: #ed1a35;
+  }
+  small {
+    font-size: .7em;
+    font-weight: 400;
+    display: block;
   }
   @include mq(narrow) {
     display: block;
@@ -72,8 +107,11 @@
 .poweredby {
   img {
     max-width: 128px;
-    margin: 25px auto;
+    margin: 25px auto 0;
     float: none;
+    @include mq(narrow) {
+      display: block;
+    }
   }
 }
 .noshipping {
