--- a/_includes/purchase.html
+++ b/_includes/purchase.html
@@ -12,6 +12,7 @@
       </p>
     </div>
     <aside class="purchase-meta">
+      <h4 class="purchase-meta--header">Further info</h4>
       <p class="purchase--deliveryest">An exclusive <strong>Artist Edition</strong> (boxed with a beautiful signed print) is also <a href="/fisherwomen_artists_edition">available here</a>.</p>
       <p>Publication is estimated to ship in May-June 2020.</p>
 
