--- a/_includes/purchase_artistsedition.html
+++ b/_includes/purchase_artistsedition.html
@@ -10,6 +10,7 @@
       {% endfor %}
       </div>
       <aside class="purchase-meta">
+        <h4 class="purchase-meta--header">Further info</h4>
         <p>This Artist Edition is limited to 50 editions.</p>
         <p>Publication is estimated to ship in May-June 2020.</p>
 
