--- a/_sass/_purchase.scss
+++ b/_sass/_purchase.scss
@@ -54,6 +54,10 @@
 .purchase-meta {
 
 }
+.purchase-meta--header {
+  font-weight: 700;
+  margin-bottom: 1em;
+}
 .purchase--heading {
   font-weight: 700;
   font-size: 1.35em;
