--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,8 @@
       {{ content }}
       {% if page.shipping == false and page.tags contains "home" %}
         <div class="purchase--wrap">
-          <button class="purchase-link"><a class="purchase-link--anchor" href="/fisherwomen_standard_edition">Standard edition</a></button>
-          <button class="purchase-link"><a class="purchase-link--anchor" href="/fisherwomen_artists_edition">Artist edition</a></button>
+          <button class="purchase-link"><a class="purchase-link--anchor" href="/fisherwomen_portfolio_edition">Portfolio edition</a></button>
+          <button class="purchase-link"><a class="purchase-link--anchor" href="/fisherwomen_artists_edition">Artists edition</a></button>
         </div>
 
       {% elsif page.shipping == true and page.tags contains "standardedition" %}
