--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -48,6 +48,11 @@ a {
 .content-intro {
   max-width: 480px;
   margin:  0 auto;
+  h3 {
+    font-weight: 700;
+    font-size: 1.2em;
+    margin: 25px 0 0;
+  }
   h3 img {
     display: block;
     width: 100%;
