--- a/_layouts/default_nosale.html
+++ b/_layouts/default_nosale.html
@@ -1,8 +1,28 @@
 {% include head.html %}
   <body>
     <main>
-      <h1 class="logo"><a href="/"><img class="title--logo" src="{{ p.url | prepend: site.baseurl }}/assets/images/logo-tenoclockbooks.png" alt="Ten O'Clock Books" /></a></h1>
+      <header class="header">
+        <h1 class="title"><a href="/"><img class="title--logo" src="{{ p.url | prepend: site.baseurl }}/assets/images/logo-tenoclockbooks.png" alt="Ten O'Clock Books" /></a></h1>
+        <section class="follow">
+          <!-- <h2 class="follow--header">Follow us</h2> -->
+          <ul class="follow--links">
+            <li>
+              <a href="https://www.instagram.com/tenoclockbooks">
+                <img class="follow--icon" src="{{ p.url | prepend: site.baseurl }}/assets/images/icon--instagram.png" alt="Instagram" /></a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/tenoclockbooks">
+                <img class="follow--icon" src="{{ p.url | prepend: site.baseurl }}/assets/images/icon--facebook.png" alt="Facebook" /></a>
+            </li>
+          </ul>
+        </section>
+      </header>
+      <p class="statement">
+        {{ page.title }}
+      </p>
+      <section class="content-intro">
       {{ content }}
+      </section>
   </main>
   {% include footer.html %}
   </body>
