--- a/_includes/purchase_artistsedition.html
+++ b/_includes/purchase_artistsedition.html
@@ -2,7 +2,6 @@
   <h3 class="purchase--heading">Pre-order purchase Artist Edition</h3>
     <div class="purchase-info">
       {% for item in site.data.books %} <!-- Get everything in the books file -->
-        <!-- <h3 class="purchase--heading">{{ item.title }} – Artist's Edition is available to pre-order now</h3> -->
         <h4 class="purchase--price"><strong>£{{ item.unit_price_special }}</strong> plus shipping</h4>
         <p class="purchase--action"><button id="checkout-button-sku_Gm7SWsQW0UaOch" role="link" class="buy">Buy now – UK<small>(plus £5 UK shipping)</small></button></p>
         <p class="purchase--action"><button id="checkout-button-sku_Gm8Hh4C81u9Lq7" role="link" class="buy">Buy now – International<small>(plus £14.95 International shipping)</small></button></p>
@@ -17,3 +16,67 @@
       </aside>
 
 </section>
+
+
+<div id="error-message" class="error"></div>
+<!-- ARTIST'S EDITION -->
+<script>
+(function() {
+  var stripe = Stripe('pk_live_Nr6cMArk6PU4EcOk38vAWQQe008LxRlbPs');
+
+  var checkoutButton = document.getElementById('checkout-button-sku_Gm7SWsQW0UaOch');
+  checkoutButton.addEventListener('click', function () {
+    // When the customer clicks on the button, redirect
+    // them to Checkout.
+    stripe.redirectToCheckout({
+      items: [{sku: 'sku_Gm7SWsQW0UaOch', quantity: 1}],
+
+      // Do not rely on the redirect to the successUrl for fulfilling
+      // purchases, customers may not always reach the success_url after
+      // a successful payment.
+      // Instead use one of the strategies described in
+      // https://stripe.com/docs/payments/checkout/fulfillment
+      successUrl: 'https://www.tenoclockbooks.com/thanks',
+      cancelUrl: 'https://www.tenoclockbooks.com/canceled',
+    })
+    .then(function (result) {
+      if (result.error) {
+        // If `redirectToCheckout` fails due to a browser or network
+        // error, display the localized error message to your customer.
+        var displayError = document.getElementById('error-message');
+        displayError.textContent = result.error.message;
+      }
+    });
+  });
+})();
+</script>
+<script>
+(function() {
+  var stripe = Stripe('pk_live_Nr6cMArk6PU4EcOk38vAWQQe008LxRlbPs');
+
+  var checkoutButton = document.getElementById('checkout-button-sku_Gm8Hh4C81u9Lq7');
+  checkoutButton.addEventListener('click', function () {
+    // When the customer clicks on the button, redirect
+    // them to Checkout.
+    stripe.redirectToCheckout({
+      items: [{sku: 'sku_Gm8Hh4C81u9Lq7', quantity: 1}],
+
+      // Do not rely on the redirect to the successUrl for fulfilling
+      // purchases, customers may not always reach the success_url after
+      // a successful payment.
+      // Instead use one of the strategies described in
+      // https://stripe.com/docs/payments/checkout/fulfillment
+      successUrl: 'https://www.tenoclockbooks.com/thanks',
+      cancelUrl: 'https://www.tenoclockbooks.com/canceled',
+    })
+    .then(function (result) {
+      if (result.error) {
+        // If `redirectToCheckout` fails due to a browser or network
+        // error, display the localized error message to your customer.
+        var displayError = document.getElementById('error-message');
+        displayError.textContent = result.error.message;
+      }
+    });
+  });
+})();
+</script>
