--- a/_includes/purchase_portfolioedition.html
+++ b/_includes/purchase_portfolioedition.html
@@ -1,17 +1,38 @@
-<script src="https://js.stripe.com/v3"></script>
-{% include purchase_artistsedition.html %}
+  <section class="purchase">
+    <h3 class="purchase--heading">Pre-order purchase</h3>
+    <div class="purchase-info">
+      {% for item in site.data.books %} <!-- Get everything in the books file -->
+        <h4 class="purchase--price"><strong>£{{ item.unit_price }}</strong> plus shipping (limited edition of 450).</h4>
+        <p class="purchase--action"><button id="checkout-button-sku_GlS4daIzAFmr6x" role="link" class="buy">Buy now – UK <small>(plus £5 UK shipping)</small></button></p>
+        <p class="purchase--action"><button id="checkout-button-sku_GlSJ1jKhNAq9Ch" role="link" class="buy">Buy now – International <small>(plus £14.95 International shipping)</small></button></p>
+      {% endfor %}
+      <p class="poweredby">
+        <img src="{{ p.url | prepend: site.baseurl }}/assets/images/powered_by_stripe@2x.png" alt="Payments powered by Stripe" />
+      </p>
+    </div>
+    <aside class="purchase-meta">
+      <h4 class="purchase-meta--header">Further info</h4>
+      <p class="purchase--deliveryest">An exclusive <strong>Artists Edition</strong> (boxed with a beautiful signed print) is also <a href="/fisherwomen_artists_edition">available here</a>.</p>
+      <p>Publication is estimated to ship in May-June 2020.</p>
+
+    </aside>
+</section>
+</div>
+
+
+
 <div id="error-message" class="error"></div>
-<!-- ARTIST'S EDITION -->
+<!-- UK -->
 <script>
 (function() {
   var stripe = Stripe('pk_live_Nr6cMArk6PU4EcOk38vAWQQe008LxRlbPs');
 
-  var checkoutButton = document.getElementById('checkout-button-sku_Gm7SWsQW0UaOch');
+  var checkoutButton = document.getElementById('checkout-button-sku_GlS4daIzAFmr6x');
   checkoutButton.addEventListener('click', function () {
     // When the customer clicks on the button, redirect
     // them to Checkout.
     stripe.redirectToCheckout({
-      items: [{sku: 'sku_Gm7SWsQW0UaOch', quantity: 1}],
+      items: [{sku: 'sku_GlS4daIzAFmr6x', quantity: 1}],
 
       // Do not rely on the redirect to the successUrl for fulfilling
       // purchases, customers may not always reach the success_url after
@@ -20,6 +41,7 @@
       // https://stripe.com/docs/payments/checkout/fulfillment
       successUrl: 'https://www.tenoclockbooks.com/thanks',
       cancelUrl: 'https://www.tenoclockbooks.com/canceled',
+      billingAddressCollection: 'required',
     })
     .then(function (result) {
       if (result.error) {
@@ -32,16 +54,17 @@
   });
 })();
 </script>
+<!-- International -->
 <script>
 (function() {
   var stripe = Stripe('pk_live_Nr6cMArk6PU4EcOk38vAWQQe008LxRlbPs');
 
-  var checkoutButton = document.getElementById('checkout-button-sku_Gm8Hh4C81u9Lq7');
+  var checkoutButton = document.getElementById('checkout-button-sku_GlSJ1jKhNAq9Ch');
   checkoutButton.addEventListener('click', function () {
     // When the customer clicks on the button, redirect
     // them to Checkout.
     stripe.redirectToCheckout({
-      items: [{sku: 'sku_Gm8Hh4C81u9Lq7', quantity: 1}],
+      items: [{sku: 'sku_GlSJ1jKhNAq9Ch', quantity: 1}],
 
       // Do not rely on the redirect to the successUrl for fulfilling
       // purchases, customers may not always reach the success_url after
