--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,13 +40,17 @@
           <button class="purchase-link"><a class="purchase-link--anchor" href="/fisherwomen_artists_edition">Artists edition</a></button>
         </div>
 
-      {% elsif page.shipping == true and page.tags contains "standardedition" %}
+      {% elsif page.shipping == true and page.tags contains "noshipping" %}
 
-        {% include stripe.html %}
+        {% include purchase_noshipping.html %}
+
+      {% elsif page.shipping == true and page.tags contains "portfolioedition" %}
+
+        {% include purchase_portfolioedition.html %}
 
       {% elsif page.shipping == true and page.tags contains "artistsedition" %}
 
-        {% include stripe_artistsedition.html %}
+        {% include purchase_artistsedition.html %}
 
       {% endif %}
 
