--- a/_includes/purchase_noshipping.html
+++ b/_includes/purchase_noshipping.html
@@ -1,5 +1,5 @@
 <section class="purchase">
-  <h3 class="purchase--heading">Pre-order purchase Artist Edition</h3>
+  <h3 class="purchase--heading">Pre-order purchase Portfolio Edition</h3>
     <div class="purchase-info">
       {% for item in site.data.books %} <!-- Get everything in the books file -->
       <h4 class="purchase--price"> £{{ item.unit_price }}</h4>
