--- a/_includes/purchase_noshipping.html
+++ b/_includes/purchase_noshipping.html
@@ -43,6 +43,9 @@
       // https://stripe.com/docs/payments/checkout/fulfillment
       successUrl: 'https://www.tenoclockbooks.com/thanks',
       cancelUrl: 'https://www.tenoclockbooks.com/canceled',
+      billingAddressCollection: 'required',
+      shippingAddressCollection: 'required',
+
     })
     .then(function (result) {
       if (result.error) {
