Added shipping to the correct file!

--- a/_includes/purchase_artistsedition.html
+++ b/_includes/purchase_artistsedition.html
@@ -68,6 +68,9 @@
       // https://stripe.com/docs/payments/checkout/fulfillment
       successUrl: 'https://www.tenoclockbooks.com/thanks',
       cancelUrl: 'https://www.tenoclockbooks.com/canceled',
+      billingAddressCollection: 'required',
+      shippingAddressCollection: 'required',
+
     })
     .then(function (result) {
       if (result.error) {
