Removed shipping address js – was causing error

--- a/_includes/purchase_artistsedition.html
+++ b/_includes/purchase_artistsedition.html
@@ -38,6 +38,7 @@
       // https://stripe.com/docs/payments/checkout/fulfillment
       successUrl: 'https://www.tenoclockbooks.com/thanks',
       cancelUrl: 'https://www.tenoclockbooks.com/canceled',
+      billingAddressCollection: 'required',
     })
     .then(function (result) {
       if (result.error) {
@@ -69,7 +70,7 @@
       successUrl: 'https://www.tenoclockbooks.com/thanks',
       cancelUrl: 'https://www.tenoclockbooks.com/canceled',
       billingAddressCollection: 'required',
-      shippingAddressCollection: 'required',
+      // shippingAddressCollection: 'required',
 
     })
     .then(function (result) {
