--- a/_includes/purchase_portfolioedition.html
+++ b/_includes/purchase_portfolioedition.html
@@ -42,7 +42,7 @@
       successUrl: 'https://www.tenoclockbooks.com/thanks',
       cancelUrl: 'https://www.tenoclockbooks.com/canceled',
       billingAddressCollection: 'required',
-      shippingAddressCollection: 'required',
+      // shippingAddressCollection: 'required',
     })
     .then(function (result) {
       if (result.error) {
@@ -74,6 +74,7 @@
       // https://stripe.com/docs/payments/checkout/fulfillment
       successUrl: 'https://www.tenoclockbooks.com/thanks',
       cancelUrl: 'https://www.tenoclockbooks.com/canceled',
+      billingAddressCollection: 'required',
     })
     .then(function (result) {
       if (result.error) {
