--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,5 +17,5 @@
     <meta charset="utf-8">
     <title>{{ page.title }} - {{ site.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
-    <link rel="stylesheet" href="https://use.typekit.net/adc4uvy.css">
+    <link rel="stylesheet" href="https://use.typekit.net/hjs1coq.css">
   </head>
