Updated press info; added pressimages.zip file

--- a/_includes/reviews.html
+++ b/_includes/reviews.html
@@ -7,3 +7,5 @@
       <i>Fisherwomen</i> 2019 Exhibition launch
   </li>
 </ul>
+
+<p>Contact <a href="mailto:hello@tenoclockbooks.com">hello@tenoclockbooks.com</a> for press images and interview enquiries.</p>
